--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "dependencies": {
     "react": "^16.3.2",
-    "react-dom": "^16.3.2"
+    "react-dom": "^16.3.2",
+    "web3": "^1.0.0-beta.34"
   },
   "devDependencies": {
     "react-scripts": "1.1.4"
